syntax = "proto3";

package api.common.money.v1;

option go_package = "github.com/majidmvulle/ibkr-client/proto/gen/go/api/common/money/v1;money";

// Represents an amount of money with its currency type.
// Adapted from: https://github.com/googleapis/googleapis/blob/master/google/type/money.proto
message Money {
  // The currency code, any valid currency code, fiat or crypto.
  string currency_code = 1;

  // The whole units of the amount.
  // For example if `currencyCode` is `"USD"`, then 1 unit is one US dollar.
  int64 units = 2;

  // Number of nano (10^-18) units of the amount.
  // The value must be between -999,999,999,999,999,999 and +999,999,999,999,999,999 inclusive.
  // If `units` is positive, `nanos` must be positive or zero.
  // If `units` is zero, `nanos` can be positive, zero, or negative.
  // If `units` is negative, `nanos` must be negative or zero.
  // For example $-1.75 is represented as `units`=-1 and `nanos`=-750,000,000,000,000,000.
  int64 nanos = 3;
}
